Hide overflow by default to prevent layout inconsistency

--- a/src/clear-cms/src/styles.scss
+++ b/src/clear-cms/src/styles.scss
@@ -6,4 +6,6 @@ body {
     margin: 0px;
     width: 100%;
     height: 100vh;
+
+    overflow: hidden;
 }
